# Tree_SL

./: .gitignore  CMakeLists.txt  README.md  ast.c  ast.h  controller.c  data.c  data.h  defs.h  string.c  string.h  tree.lx  tree.y
common/: arena.c  arena.h  string_view.c  string_view.h
include/: tree_ast.h  tree_data.h  tree_errors.h  tree_eval.h  tree_nodetypes.h  tree_symtab.h
src/: main.c  tree.lx  tree.y  tree_ast.c  tree_data.c  tree_errors.c  tree_eval.c  tree_symtab.c
tests/: script.tree  tests1.txt  tests2.txt
